After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699493 - SOCKS5 proxy code crashes if it cannot authenticate
SOCKS5 proxy code crashes if it cannot authenticate
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: network
2.36.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-05-02 16:30 UTC by Simon McVittie
Modified: 2013-05-09 18:13 UTC
See Also:
GNOME target: ---
GNOME version: 3.7/3.8


Attachments
GSocks5Proxy: don't crash if parsing negotiation reply fails (912 bytes, patch)
2013-05-02 16:30 UTC, Simon McVittie
committed Details | Review

Description Simon McVittie 2013-05-02 16:30:42 UTC
Created attachment 243073 [details] [review]
GSocks5Proxy: don't crash if parsing negotiation reply fails

The GError should be initialized to NULL, otherwise we'll
"pile up" errors, then try to free an uninitialized pointer.
Comment 1 Dan Winship 2013-05-02 16:55:27 UTC
Comment on attachment 243073 [details] [review]
GSocks5Proxy: don't crash if parsing negotiation reply fails

yup.

I have a half-written GSocket-based SOCKS proxy in a local branch so we can actually test this code in "make check" some day...
Comment 2 Simon McVittie 2013-05-02 17:41:00 UTC
Comment on attachment 243073 [details] [review]
GSocks5Proxy: don't crash if parsing negotiation reply fails

Fixed in git for 2.36.2 and 2.37.1, thanks.